# text-translator-ai

./: .gitignore  README.md  SPECIFICATION.md  pyproject.toml
scripts/: install_spotlight_launcher.sh  launch_text_translator_ai.sh
tests/: conftest.py  test_ai_client.py  test_api.py  test_settings.py
text_translator_ai/: __init__.py  ai_client.py  app.py  db.py  main.py  schemas.py  settings.py  translation.py  ui.py
