[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text-translator-ai"
version = "0.1.0"
description = "Local AI-backed text translator with FastAPI, SQLite settings, and a Google Translate-style UI."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
]

[project.scripts]
text-translator-ai = "text_translator_ai.main:main"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["text_translator_ai*"]
